tests/baselines/reference/parserModifierOnPropertySignature1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnPropertySignature1.ts (1 errors) ====
    interface Foo{
        public biz;
        ~~~~~~
!!! error TS1131: Property or signature expected.
    }
    